--- a/empi-ws/src/main/webapp/index.html
+++ b/empi-ws/src/main/webapp/index.html
@@ -27,7 +27,7 @@
 						<option value="v2.4">v2.4</option>
 						<option value="v2.5">v2.5</option>
 						<option value="v2.5.1">v2.5.1</option>
-						<option value="v2.6">v2.6</option>
+						<option value="v2.6" selected="selected">v2.6</option>
 					</select>
 				</td>
 			</tr>
